# ungoogled-chromium

./: .gitlab-ci.yml  .gitmodules  README.md  flags.gn  ppc64le_build.bash
.github/: FUNDING.yml
config_bundles/common/: patch_order.list
patches/: Yarn.patch  aw-snap-temporary-patch.patch  enable-rpm-build.patch  enable-vaapi.patch  eu-strip.patch  llvm-bug-workaround.patch  llvm-codegen.patch  mei_preload.patch  mei_preload2.patch  series
patches/ppc64le/crashpad/: 0001-Implement-support-for-PPC64-on-Linux.patch
patches/ppc64le/ffmpeg/: 0001-Add-support-for-ppc64.patch
patches/ppc64le/pdfium/: 0001-pdfium-allocator-Use-64k-page-sizes-on-ppc64.patch
patches/ppc64le/sandbox/: 0001-sandbox-linux-Update-syscall-helpers-lists-for-ppc64.patch
patches/ppc64le/v8/: 0001-Fix-build-issues-on-64k-systems.patch  0001-PPC-s390-iwyu-Remove-include-heap-inl.h-counters.h.patch
