clang_use_chrome_plugins=false
closure_compile=false
enable_hangout_services_extension=false
enable_hevc_demuxing=true
enable_mdns=false
enable_mse_mpeg2ts_stream_parser=true
enable_nacl=false
enable_nacl_nonsfi=false
enable_one_click_signin=false
enable_reading_list=false
enable_remoting=false
enable_reporting=false
enable_service_discovery=false
enable_widevine=false
exclude_unwind_tables=true
fieldtrial_testing_like_official_build=true
google_api_key=""
google_default_client_id=""
google_default_client_secret=""
optimize_webui=false
safe_browsing_mode=0
treat_warnings_as_errors=false
use_official_google_api_keys=false
use_unofficial_version_number=false
is_clang=true
clang_base_path="../llvm_build"
use_lld=true
enable_dav1d_decoder=false
#use_jumbo_build=true
#jumbo_file_merge_limit=8
enable_ac3_eac3_audio_demuxing=true
blink_symbol_level=0
enable_iterator_debugging=false
fatal_linker_warnings=false
is_debug=false
is_official_build=true
symbol_level=0

ffmpeg_branding="ChromeOS"
proprietary_codecs=true
enable_mse_mpeg2ts_stream_parser=true
enable_av1_decoder=true
use_openh264=true

use_vaapi=true

is_component_build = false # statically link components
enable_linux_installer=true

# system integration
system_libdir="lib64"
use_gio=true
use_pulseaudio=true
icu_use_data_file=true

pdf_enable_xfa=true
